--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "strict": true,
     "outDir": "dist",
-    "baseUrl": "."
+    "baseUrl": ".",
   },
   "include": ["backend", "frontend"]
 }
