chore: update package.json and tsconfig.json, add reset.css
- Updated linting scripts in package.json to include .tsx and .json files.
- Added @eslint/json as a dev dependency.
- Cleaned up formatting in package.json and tsconfig.json.
- Introduced reset.css with basic styles for html and body elements.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,9 @@
 {
     "editor.codeActionsOnSave": {
-      "source.fixAll": "always", // Run ESLint auto-fix when saving
-      "source.fixAll.eslint": "always" // Specifically run eslint fixes
+        "source.fixAll": "always",
+        "source.fixAll.eslint": "always"
     },
-    "editor.formatOnSave": true, // Also run Prettier formatting
-    "eslint.validate": [
-      "javascript",
-      "typescript",
-    ],
-    "prettier.requireConfig": true // Only format if Prettier config is present
-  }
+    "editor.formatOnSave": true,
+    "eslint.validate": ["javascript", "typescript"],
+    "prettier.requireConfig": true
+}
