--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
         "lint-fix": "eslint . --ext .ts,.mjs --fix,.tsx --fix,.json --fix"
     },
     "dependencies": {
+        "@pixi/layers": "^2.1.0",
+        "@pixi/sound": "^6.0.1",
+        "@tweenjs/tween.js": "^25.0.0",
         "express": "^4.18.2",
+        "pixi.js": "^8.11.0",
         "ws": "^8.13.0"
     },
     "devDependencies": {
