refactor: update import paths to use aliases for better readability and maintainability

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,17 @@
         "esModuleInterop": true,
         "strict": true,
         "outDir": "dist",
-        "baseUrl": "."
+        "baseUrl": ".",
+        "paths": {
+            "@config/*": ["frontend/core/config/*"],
+            "@components/*": ["frontend/core/containers/components/*"],
+            "@popup/*": ["frontend/core/containers/popup/*"],
+            "@ui/*": ["frontend/core/containers/ui/*"],
+            "@world/*": ["frontend/core/containers/world/*"],
+            "@entities/*": ["frontend/core/containers/entities/*"],
+            "@systems/*": ["frontend/core/systems/*"],
+            "@common/*": ["frontend/common"],
+        }
     },
     "include": ["backend", "frontend"]
 }
